syntax = "proto3";

option csharp_namespace = "UserService.Protos";

service ProductService {
    rpc GetCheapestProduct(ProductRequest) returns (ProductResponse);
    rpc GetAllPrices(ProductRequest) returns (ProductList);
    rpc GetCheapestByStore(StoreRequest) returns (ProductResponse);
    rpc GetProductById(ProductIdRequest) returns (ProductResponse);
}

message ProductRequest {
    string name = 1;
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    double quantity = 5;
    string unit = 6;
    string store = 7;
    double pricePerUnit = 8;
}

message ProductResponse {
    Product product = 1;
}

message ProductList {
    repeated Product products = 1;
}

message StoreRequest {
    string name = 1;
    string store = 2;
}

message ProductIdRequest {
    string id = 1;
}